development of the component home page

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,7 +4,7 @@ nav.navbar {
   height: 70px;
   border-bottom: 1px solid $custom-gray;
 
-  .nav-brand {
+  .navbar-brand {
     img {
       height: 69px;
     }
