create the component restaurant

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,4 +15,13 @@ $custom-colors:(
 @import "~bulma/bulma";
 
 //Import rbx style fixes
-@import "~rbx/rbx"
+@import "~rbx/rbx";
+
+.dashed_box {
+  font-size: 14px;
+  background: white;
+  font-weight: bold;
+  border: 1px dashed $custom-gray;
+  padding-left: 20px;
+  padding-right: 20px;
+}
