--- a/src/App.scss
+++ b/src/App.scss
@@ -25,3 +25,12 @@ $custom-colors:(
   padding-left: 20px;
   padding-right: 20px;
 }
+
+.modal_root {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  z-index: 2;
+}
